updated berkeley buildings

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="work buildingswork" id="map">
           <div class="workcover">Map of Berkeley | Graphic Design</div>
-          <img src="assets/images/map2-min.png" class="hor">
+          <img src="assets/images/newdoe.png" class="hor">
         </div>
         <div class="work innowork">
           <div class="workcover">Innovative Design | Marketing Design</div>
@@ -311,7 +311,7 @@
         our beautiful architecture and the final
         version of the map! </p>
     </div>
-    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/map2.png"></div></div>
+    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/map2new.png"></div></div>
     <div class="workcontent">
       <h2 class="tech"> Technologies: Adobe Illustrator </h2>
       <p> The architecture included here so far, in my opinion, captures the some of the most "Berkeley-esque" features
@@ -319,16 +319,16 @@
         that come to mind when I think of our campus. </p>
       <h2 class="tech"> Doe Library </h2>
     </div>
-    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/doe-min.png"></div></div>
+    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/doenew.png"></div></div>
     <div class="caption"> <p><em> One of my favorite places to study is North Reading Room, located on the second story of Doe Library. </em> </p></div>
-    <div class="workcontent"><h2 class="tech"> Hearst Memorial Mining Building </h2></div>
-    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/hearst-min.png"></div></div>
-    <div class="caption"> <p><em> If you're ever on campus, be sure to check out the inside of this building! It is stunningly beautiful, and
-    also has a fascinating role in the history of mining and metallurgy. </em> </p></div>
-    <div class="workcontent"><h2 class="tech"> Campanile </h2></div>
-    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/camp2-min.png"></div></div>
-    <div class="caption"> <p><em> Fun fact: our beloved Campanile is the tallest university clock tower, as well as the
-      third tallest bell & clock tower in the world!</em> </p></div>
+    <div class="workcontent"><h2 class="tech"> South Hall </h2></div>
+    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/southnew.png"></div></div>
+    <div class="caption"> <p><em> South Hall is the oldest building on campus, and the only remaining building
+    from the original campus. </em> </p></div>
+    <div class="workcontent"><h2 class="tech"> Soda Hall & Evans Hall </h2></div>
+    <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/sodaevansnew.png"></div></div>
+    <div class="caption"> <p><em> Evans and Soda are the Math and Computer Science buildings, respectively -- in other words,
+    my second home(s). </em> </p></div>
     <div class="workcontent"><h2 class="tech"> Sather Gate </h2></div>
     <div class="introimage-wrapper"><div class="introimage map"><img src="assets/images/sather-min.png"></div></div>
     <div class="caption bottom"> <p><em> Sather Gate is always beautiful, but it looks especially lovely when it is lit up at night in the rain. </em> </p></div>
