in progress of adding all content pages

--- a/code/code.html
+++ b/code/code.html
@@ -35,7 +35,7 @@
     <h1 class="section-title"> Code</h1>
     <h4 class="section-subtitle"> Explorations of data-oriented UGC, interactive user interfaces,
     machine learning <br>webapps, and branded web development. </h4>
-        <a href="stubhub.html" class="transition">
+        <a href="content/stubhub.html" class="transition">
         <div class="preview">
             <div class="preview-layover">
                 StubHub Community
@@ -43,7 +43,7 @@
             <img src="../partials/images/code/stubhub.png" class="height">
         </div>
         </a>
-        <a href="personalsite.html" class="transition">
+        <a href="content/personalsite.html" class="transition">
             <div class="preview">
                 <div class="preview-layover">
                     Personal Site Rebuild
@@ -51,16 +51,20 @@
                 <img src="../partials/images/code/personal.png">
             </div>
         </a>
-        <div class="preview bottom" style="background-color:#edb7bf">
-            <div class="preview-layover">
-                Feaster Landing Page
-            </div>
-            <img src="../partials/images/design/feaster.png">
-        </div>
-        <div class="preview bottom">
-            <div class="preview-layover">
-                WeatherOrNot
-            </div>
-            <img src="../partials/images/code/weather.png" class="height">
-        </div>
+        <a href="content/feaster.html" class="transition">
+          <div class="preview bottom" style="background-color:#edb7bf">
+              <div class="preview-layover">
+                  Feaster Landing Page
+              </div>
+              <img src="../partials/images/design/feaster.png">
+          </div>
+        </a>
+        <a href="content/weatherornot.html" class="transition">
+          <div class="preview bottom">
+              <div class="preview-layover">
+                  WeatherOrNot
+              </div>
+              <img src="../partials/images/code/weather.png" class="height">
+          </div>
+        </a>
 </div>
