--- a/design/content/cubcon.html
+++ b/design/content/cubcon.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Personal Site - Adriana Babakanian</title>
+  <title>CubCon - Adriana Babakanian</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css"> -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <!-- Google Font Scripts -->
   <link rel="stylesheet" type="text/css"
@@ -25,27 +25,19 @@
   <script src="jquery-3.2.1.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
-  <script src="../js/app.js"></script>
+  <script src="../../js/app.js"></script>
 
 </head>
 
-<div class="container">
-    <a href="code.html"class="back lavender" style="color:white"><</a>
-    <h1 class="section-title"> Personal Portfolio Rebuild</h1>
-    <h4 class="section-subtitle"> I built the previous iteration of my personal site
-      up from sratch when I was just becoming familiar with web development. Although
-      it was very rewarding to start with blank HTML, stylesheets, and scripts and then
-      StackOverflow my way through every obstacle I encountered, my from-the-ground-up
-      approach resulted in laggy page loads and suboptimal programming style. So, I
-      decided to teach myself AngularJS in order to build a faster and cleaner site. It is
-      still a work in progress, and I am excited to continue working on it!
-      <br>
-      <br>
-      Things to look forward to: command-line inspired user interface, more hidden animations,
-      and enhanced responsiveness.
-    </h4>
-        <div class="full-image"><img src="../partials/images/code/personal.png"></div>
-        <div class="content-text">
-        </div>
-
-</div>
+<body>
+  <div class="container">
+      <a href="../design.html"class="back lavender" style="color:white"><</a>
+      <h1 class="section-title"> Cal Hacks 4.0</h1>
+      <h4 class="section-subtitle"> I'm a director at Cal Hacks, the
+        largest hackathon in the world! One of my main roles is as graphic
+        designer &mdash; logos, branding, marketing, you name it. Over the
+        past year, I created the branding for Cal Hacks 4.0 under the general
+        guidance of a California road trip theme.
+      </h4>
+  </div>
+</body>
