--- a/design/design.html
+++ b/design/design.html
@@ -36,63 +36,78 @@
     <h1 class="section-title"> Design</h1>
     <h4 class="section-subtitle"> A compilation of some of my branding & marketing schemes, illustrations, <br>product design,
       and just-for-fun doodles. </h4>
-        <a href="page1.html" class="transition">
-        <div class="preview" style="background-color:#c9d1eb">
-            <div class="preview-layover">
-                CAL HACKS 4.0
-            </div>
-            <img src="../partials/images/design/chroadtrip.png" style="margin-top:10px">
-
-        </div>
+        <a href="content/page1.html" class="transition">
+          <div class="preview" style="background-color:#c9d1eb">
+              <div class="preview-layover">
+                  CAL HACKS 4.0
+              </div>
+              <img src="../partials/images/design/chroadtrip.png" style="margin-top:10px">
+          </div>
         </a>
-        <div class="preview" style="background-color:#d2ece8">
-            <div class="preview-layover">
-                SUSHI SERIES
-            </div>
-            <img src="../partials/images/design/dragon.png">
-        </div>
-        <div class="preview">
-            <div class="preview-layover">
-                Doodles
-            </div>
-            <img src="../partials/images/design/handson.png">
-        </div>
-        <div class="preview" style="background-color:#b0d3ab">
-            <div class="preview-layover">
-                MAP OF BERKELEY
-            </div>
-            <img src="../partials/images/design/berkeleymap.png">
-        </div>
-        <div class="preview" style="background-color:#edb7bf">
-            <div class="preview-layover">
-                Feaster
-            </div>
-            <img src="../partials/images/design/feaster.png">
-        </div>
-        <div class="preview" style="background-color:#49a3bf">
-            <div class="preview-layover">
-                InnoD Marketing
-            </div>
-              <img src="../partials/images/design/innod2.png">
-        </div>
-        <div class="preview" style="background-color:#b0e3f7">
-            <div class="preview-layover">
-                Cal Hacks Presents: CubCon
-            </div>
-            <img src="../partials/images/design/cubcon2.png" style="height:100%;width:initial">
-        </div>
-        <div class="preview" style="background-color:#f29176">
-            <div class="preview-layover">
-                Valentine's Day Cards
-            </div>
-            <img src="../partials/images/design/circuit.png" class="height">
-        </div>
-        <div class="preview bottom" style="background-color:#f29176">
-            <div class="preview-layover">
-                Laud'Em
-            </div>
-            <img src="../partials/images/design/laudem.png">
-        </div>
+        <a href="content/sushi.html" class="transition">
+          <div class="preview" style="background-color:#d2ece8">
+              <div class="preview-layover">
+                  SUSHI SERIES
+              </div>
+              <img src="../partials/images/design/dragon.png">
+          </div>
+        </a>
+        <a href="content/doodles.html" class="transition">
+          <div class="preview">
+              <div class="preview-layover">
+                  Doodles
+              </div>
+              <img src="../partials/images/design/handson.png">
+          </div>
+        </a>
+        <a href="content/berkeleymap.html" class="transition">
+          <div class="preview" style="background-color:#b0d3ab">
+              <div class="preview-layover">
+                  MAP OF BERKELEY
+              </div>
+              <img src="../partials/images/design/berkeleymap.png">
+          </div>
+        </a>
+        <a href="content/feaster.html" class="transition">
+          <div class="preview" style="background-color:#edb7bf">
+              <div class="preview-layover">
+                  Feaster
+              </div>
+              <img src="../partials/images/design/feaster.png">
+          </div>
+        </a>
+        <a href="content/innod.html" class="transition">
+          <div class="preview" style="background-color:#49a3bf">
+              <div class="preview-layover">
+                  InnoD Marketing
+              </div>
+                <img src="../partials/images/design/innod2.png">
+          </div>
+        </a>
+        <a href="content/cubcon.html" class="transition">
+          <div class="preview" style="background-color:#b0e3f7">
+              <div class="preview-layover">
+                  Cal Hacks Presents: CubCon
+              </div>
+              <img src="../partials/images/design/cubcon2.png" style="height:100%;width:initial">
+          </div>
+        </a>
+        <a href="content/valentine.html" class="transition">
+          <div class="preview" style="background-color:#e0a6b5">
+              <div class="preview-layover">
+                  Valentine's Day Cards
+              </div>
+              <img src="../partials/images/design/circuit.png" class="height" style="height:250px">
+          </div>
+        </a>
+        <a href="content/laudem.html" class="transition">
+          <div class="preview bottom" style="background-color:#f29176">
+              <div class="preview-layover">
+                  Laud'Em
+              </div>
+              <img src="../partials/images/design/laudem.png">
+          </div>
+        </a>
 </div>
 
 </body>
