--- a/code/content/stubhub.html
+++ b/code/content/stubhub.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css"> -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <!-- Google Font Scripts -->
   <link rel="stylesheet" type="text/css"
@@ -25,13 +25,13 @@
   <script src="jquery-3.2.1.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
-  <script src="../js/app.js"></script>
+  <script src="../../js/app.js"></script>
 
 </head>
 
 
 <div class="container">
-    <a href="code.html"class="back lavender" style="color:white"><</a>
+    <a href="../code.html"class="back lavender" style="color:white"><</a>
     <h1 class="section-title"> StubHub Community</h1>
     <h4 class="section-subtitle"> As an eBay intern during Summer 2017, I worked as a part
       of StubHub's Search Infrastructure engineering team. In addition to contributing towards
@@ -46,8 +46,8 @@
       testing, cross-browser quality assurance, loacalization, and several external SDKs in both
       Web and mobile Web.
     </h4>
-        <div class="half-image" style="height:700px"><img src="../partials/images/code/stubhub/com1.png" style="width:85%"></div>
-        <div class="half-image" style="height:700px"><img src="../partials/images/code/stubhub/com2.png" style="width:85%"></div>
+        <div class="half-image" style="height:700px"><img src="../../partials/images/code/stubhub/com1.png" style="width:85%"></div>
+        <div class="half-image" style="height:700px"><img src="../../partials/images/code/stubhub/com2.png" style="width:85%"></div>
         <div class="content-text">
             The main goal of the community feature is to collect user-generated content
             and then utilize it to augment the end-to-end user experience. I worked closely
