--- a/design/content/page1.html
+++ b/design/content/page1.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css"> -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <!-- Google Font Scripts -->
   <link rel="stylesheet" type="text/css"
@@ -25,12 +25,12 @@
   <script src="jquery-3.2.1.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
-  <script src="../js/app.js"></script>
+  <script src="../../js/app.js"></script>
 
 </head>
 
 <div class="container">
-    <a href="design.html"class="back lavender" style="color:white"><</a>
+    <a href="../design.html"class="back lavender" style="color:white"><</a>
     <h1 class="section-title"> Cal Hacks 4.0</h1>
     <h4 class="section-subtitle"> I'm a director at Cal Hacks, the
       largest hackathon in the world! One of my main roles is as graphic
@@ -38,9 +38,9 @@
       past year, I created the branding for Cal Hacks 4.0 under the general
       guidance of a California road trip theme.
     </h4>
-        <div class="half-image" style="background-color:#b0e1e2"><img src="../partials/images/design/calhacks/ddoskiblue.png" class="height"></div>
-        <div class="half-image"><img src="../partials/images/design/calhacks/ddoskirepeat.png"></div>
-        <div class="full-image"><img src="../partials/images/design/chroadtrip.png"></div>
+        <div class="half-image" style="background-color:#b0e1e2"><img src="../../partials/images/design/calhacks/ddoskiblue.png" class="height"></div>
+        <div class="half-image"><img src="../../partials/images/design/calhacks/ddoskirepeat.png"></div>
+        <div class="full-image"><img src="../../partials/images/design/chroadtrip.png"></div>
         <div class="content-text">
             Cal Hacks 4.0 was an event marketed to tens of thousands of
             people, and we ultimately ended up hosting 2000 people at the
@@ -49,15 +49,15 @@
             more were all part of the
             agenda &mdash; below is a compilation of some of the finals products!
         </div>
-        <div class="quarter-image"><img src="../partials/images/design/calhacks/chbadges1.png" class="heightextra"></div>
-        <div class="quarter-image"><img src="../partials/images/design/calhacks/chbadges2.png" class="heightextra"></div>
-        <div class="quarter-image"><img src="../partials/images/design/calhacks/chbadges3.png" class="heightextra"></div>
-        <div class="quarter-image"><img src="../partials/images/design/calhacks/chbadges4.png" class="heightextra"></div>
-        <div class="full-image"><img src="../partials/images/design/calhacks/wristbands.JPG"></div>
-        <div class="long-image"><img src="../partials/images/design/calhacks/chwristband.png"></div>
-        <div class="third-image"><img src="../partials/images/design/calhacks/truck.JPG"></div>
-        <div class="third-image"><img src="../partials/images/design/calhacks/corgi.JPG"></div>
-        <div class="third-image"><img src="../partials/images/design/calhacks/sticker.JPG"></div>
+        <div class="quarter-image"><img src="../../partials/images/design/calhacks/chbadges1.png" class="heightextra"></div>
+        <div class="quarter-image"><img src="../../partials/images/design/calhacks/chbadges2.png" class="heightextra"></div>
+        <div class="quarter-image"><img src="../../partials/images/design/calhacks/chbadges3.png" class="heightextra"></div>
+        <div class="quarter-image"><img src="../../partials/images/design/calhacks/chbadges4.png" class="heightextra"></div>
+        <div class="full-image"><img src="../../partials/images/design/calhacks/wristbands.JPG"></div>
+        <div class="long-image"><img src="../../partials/images/design/calhacks/chwristband.png"></div>
+        <div class="third-image"><img src="../../partials/images/design/calhacks/truck.JPG"></div>
+        <div class="third-image"><img src="../../partials/images/design/calhacks/corgi.JPG"></div>
+        <div class="third-image"><img src="../../partials/images/design/calhacks/sticker.JPG"></div>
         <div class="full-image" style="height:340px"><img src="../partials/images/design/calhacks/chcountdown4.png"></div>
         <div class="full-image" style="height:340px"><img src="../partials/images/design/calhacks/chcountdown3.png"></div>
         <div class="full-image" style="height:340px"><img src="../partials/images/design/calhacks/chcountdown2.png"></div>
