--- a/design/content/cubcon.html
+++ b/design/content/cubcon.html
@@ -32,12 +32,19 @@
 <body>
   <div class="container">
       <a href="../design.html"class="back lavender" style="color:white"><</a>
-      <h1 class="section-title"> Cal Hacks 4.0</h1>
-      <h4 class="section-subtitle"> I'm a director at Cal Hacks, the
-        largest hackathon in the world! One of my main roles is as graphic
-        designer &mdash; logos, branding, marketing, you name it. Over the
-        past year, I created the branding for Cal Hacks 4.0 under the general
-        guidance of a California road trip theme.
+      <h1 class="section-title"> CubCon</h1>
+      <h4 class="section-subtitle"> One of our goals at Cal Hacks is to make hacker culture
+        accessible to anyone who wants to be a part of it, regardless of level of expertise in
+        programming and tech. In Spring 2017, we hosted our first ever CubCon, a series of
+        talks, workshops, and breakout sessions hosting several industry speakers and prominent campus
+        tech clubs geared torwards hackers with little or no experience. I chose to market the
+        event in a pixelated, video-game-inspired style.
+        <div class="full-image" style="height:360px"><img src="../../partials/images/design/cubcon/cubcon_cover.png"></div>
+        <div class="half-image" style="height:300px;background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/front.png"></div>
+        <div class="half-image" style="height:300px;background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/back.png"></div>
+        <div class="third-image" style="background-color:#b1e3f7"><img src="../../partials/images/design/cubcon/laptop.png" style="width:250px"></div>
+        <div class="third-image" style="background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/title.png" style="width:250px"></div>
+        <div class="third-image" style="background-color:#b1e3f7"><img src="../../partials/images/design/cubcon/rocket.png" style="width:120px"></div>
       </h4>
   </div>
 </body>
