--- a/design/content/laudem.html
+++ b/design/content/laudem.html
@@ -26,18 +26,16 @@
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="../../js/app.js"></script>
-
 </head>
 
 <body>
   <div class="container">
       <a href="../design.html"class="back lavender" style="color:white"><</a>
-      <h1 class="section-title"> Cal Hacks 4.0</h1>
-      <h4 class="section-subtitle"> I'm a director at Cal Hacks, the
-        largest hackathon in the world! One of my main roles is as graphic
-        designer &mdash; logos, branding, marketing, you name it. Over the
-        past year, I created the branding for Cal Hacks 4.0 under the general
-        guidance of a California road trip theme.
+      <h1 class="section-title"> Laud'Em</h1>
+      <h4 class="section-subtitle"> Laud'Em is an app with the purpose of spreading social altruism in
+        everyday settings and environments. I designed the user interface of the app, as well as all
+        branding and marketing materials.
       </h4>
+      <div class="full-image"><img src="../../partials/images/design/laudem.png"></div>
   </div>
 </body>
