prototyping in progress

--- a/prototyping/prototyping.html
+++ b/prototyping/prototyping.html
@@ -35,7 +35,7 @@
       <a href="../index.html"class="close lavender" style="color:white">x</a>
       <h1 class="section-title"> Prototyping </h1>
       <h4 class="section-subtitle"> Some visual manifestations of my passions for both engineering and art. </h4>
-          <a href="#!/page1" class="transition">
+          <a href="content/mo.html" class="transition">
           <div class="preview">
               <div class="preview-layover">
                   Mo: an agile tread robot
