--- a/design/content/page1.html
+++ b/design/content/page1.html
@@ -58,7 +58,7 @@
         <div class="third-image"><img src="../../partials/images/design/calhacks/truck.JPG"></div>
         <div class="third-image"><img src="../../partials/images/design/calhacks/corgi.JPG"></div>
         <div class="third-image"><img src="../../partials/images/design/calhacks/sticker.JPG"></div>
-        <div class="full-image" style="height:340px"><img src="../partials/images/design/calhacks/chcountdown4.png"></div>
-        <div class="full-image" style="height:340px"><img src="../partials/images/design/calhacks/chcountdown3.png"></div>
-        <div class="full-image" style="height:340px"><img src="../partials/images/design/calhacks/chcountdown2.png"></div>
+        <div class="full-image" style="height:340px"><img src="../../partials/images/design/calhacks/chcountdown4.png"></div>
+        <div class="full-image" style="height:340px"><img src="../../partials/images/design/calhacks/chcountdown3.png"></div>
+        <div class="full-image" style="height:340px"><img src="../../partials/images/design/calhacks/chcountdown2.png"></div>
 </div>
