--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
       href="https://fonts.googleapis.com/css?family=PT-Serif">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Nunito">
+  <link rel="stylesheet" type="text/css"
+      href="https://fonts.googleapis.com/css?family=Karla">
   <!-- JQuery -->
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="js/app.js"></script>
@@ -44,10 +46,11 @@
         </div>
     </div>
     <div class="dropdown-content">
-      <a href="design/design.html">Design</a>
+      <div class="point"></div>
+      <a href="design/design.html" style="border-radius: 4px 4px 0 0;padding-top:15px;">Design</a>
       <a href="code/code.html">Code</a>
       <a href="prototyping/prototyping.html">Prototyping</a>
-      <a href="about/about.html">About</a>
+      <a href="about/about.html" style="border-radius: 0 0 4px 4px;padding-bottom:15px;">About</a>
     </div>
   </div>
 
@@ -64,9 +67,9 @@
     <div class="terminal">
         <div class="terminal-header">
             <div class="circle-wrap">
-                <div class="circle lavender"></div>
                 <div class="circle magenta"></div>
                 <div class="circle pink"></div>
+                <div class="circle lavender"></div>
             </div>
         </div>
         <div class="terminal-text">
@@ -74,12 +77,12 @@
                 Hello world!
             </div>
             <div class="terminal-main">
-                I'm Adriana &mdash; a <em>software engineer</em>, <em>graphic designer</em>, & <em>web developer</em> studying
-                Math & Computer Science at the University of California, Berkeley. Go bears!
+                I'm Adriana &mdash; a <em class="hov">software engineer</em>, <em class="hov">graphic designer</em>, & <em class="hov">web developer</em> studying
+                Math & Computer Science at the University of California, Berkeley.
             </div>
             <div class="terminal-sub">
                 Feel free to explore my site for a synthesis of my projects and
-                experiences. Hover over the menu icon at the top left to get
+                experiences. Click on the menu icon at the top left to get
                 started!
                 <!-- and
                 maybe even a few random geeky math riddles. -->
