--- a/design/design.html
+++ b/design/design.html
@@ -21,8 +21,10 @@
       href="https://fonts.googleapis.com/css?family=PT-Serif">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Nunito">
+  <!-- Google Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- JQuery -->
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="../js/app.js"></script>
@@ -32,10 +34,32 @@
 <body>
 
 <div class="container">
-    <a href="../index.html"class="close lavender" style="color:white">x</a>
+
+    <div class="dropdown_alt">
+      <div class="dropbtn_alt">
+          <div class="bar-cont_alt">
+              <div class="bar_alt"></div>
+              <div class="bar_alt"></div>
+              <div class="bar_alt"></div>
+          </div>
+      </div>
+      <div class="dropdown-content_alt">
+        <div class="point_alt"></div>
+        <a href="../code/code.html" style="border-radius: 4px 4px 0 0;padding-top:15px;">Code</a>
+        <a href="../prototyping/prototyping.html">Prototyping</a>
+        <a href="../about/about.html" style="border-radius: 0 0 4px 4px;padding-bottom:15px;">About</a>
+      </div>
+    </div>
+
     <h1 class="section-title"> Design</h1>
     <h4 class="section-subtitle"> A compilation of some of my branding & marketing schemes, illustrations, <br>product design,
-      and just-for-fun doodles. </h4>
+      and just-for-fun doodles.
+      <a href="../index.html">
+        <div class="home">
+            <i class="material-icons mat">home</i>
+        </div>
+      </a>
+    </h4>
         <a href="content/page1.html" class="transition">
           <div class="preview" style="background-color:#c9d1eb">
               <div class="preview-layover">
