updated closers for design content pages

--- a/design/content/berkeleymap.html
+++ b/design/content/berkeleymap.html
@@ -21,19 +21,24 @@
       href="https://fonts.googleapis.com/css?family=PT-Serif">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Nunito">
+  <!-- Google Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- JQuery -->
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="../../js/app.js"></script>
-
 </head>
 
 <body>
   <div class="container">
-      <a href="../design.html"class="back lavender" style="color:white"><</a>
+    <a href="../design.html"class="close lavender" style="color:white">
+        <i class="fa fa-close close-icon"></i>
+    </a>
       <h1 class="section-title"> Map of Berkeley </h1>
-      <h4 class="section-subtitle"> One of my favorite things about the Berkeley campus is the
+      <h4 class="section-subtitle sub"> One of my favorite things about the Berkeley campus is the
         diversity in architectural style. Roman triumphal arches stand amidst not just Corinthian
         columns but also both red brick buildings and modern linework. I've been working on making a
         map of the Berkeley campus as a personal project. Below are some of the buildings I have
