--- a/design/content/doodles.html
+++ b/design/content/doodles.html
@@ -21,8 +21,12 @@
       href="https://fonts.googleapis.com/css?family=PT-Serif">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Nunito">
+  <!-- Google Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- JQuery -->
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="../../js/app.js"></script>
@@ -31,9 +35,11 @@
 
 <body>
   <div class="container">
-      <a href="../design.html"class="back lavender" style="color:white"><</a>
+      <a href="../design.html"class="close lavender" style="color:white">
+          <i class="fa fa-close close-icon"></i>
+      </a>
       <h1 class="section-title"> Doodles</h1>
-      <h4 class="section-subtitle"> Having worked as a designer for many different companies,
+      <h4 class="section-subtitle sub"> Having worked as a designer for many different companies,
         clubs, and startups, it's always a refreshing break to doodle something up with no prompt
         other than my own imagination. Below are some little illustrations I've made that don't quite
         belong to a category or series, but were fun to create nonetheless.
