--- a/design/content/feaster.html
+++ b/design/content/feaster.html
@@ -21,8 +21,12 @@
       href="https://fonts.googleapis.com/css?family=PT-Serif">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Nunito">
+  <!-- Google Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- JQuery -->
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="../../js/app.js"></script>
@@ -31,9 +35,11 @@
 
 <body>
   <div class="container">
-      <a href="../design.html"class="back lavender" style="color:white"><</a>
+      <a href="../design.html"class="close lavender" style="color:white">
+          <i class="fa fa-close close-icon"></i>
+      </a>
       <h1 class="section-title"> Feaster</h1>
-      <h4 class="section-subtitle"> In May of 2016, I began working with Feaster, a digital marketing platform in the
+      <h4 class="section-subtitle sub"> In May of 2016, I began working with Feaster, a digital marketing platform in the
         restaurant industry that provides customers with personalized, preference-based offers on local food and drink
         in real-time. Feaster is a startup that came out of UC Berkeley, and my main role was to create all of the branding
         and marketing material for the company. I additionally designed and engineered the user experience of landing pages
