--- a/design/design.html
+++ b/design/design.html
@@ -35,30 +35,30 @@
 
 <div class="container">
 
-    <div class="dropdown_alt">
-      <div class="dropbtn_alt">
-          <div class="bar-cont_alt">
-              <div class="bar_alt"></div>
-              <div class="bar_alt"></div>
-              <div class="bar_alt"></div>
-          </div>
-      </div>
-      <div class="dropdown-content_alt">
-        <div class="point_alt"></div>
-        <a href="../code/code.html" style="border-radius: 4px 4px 0 0;padding-top:15px;">Code</a>
-        <a href="../prototyping/prototyping.html">Prototyping</a>
-        <a href="../about/about.html" style="border-radius: 0 0 4px 4px;padding-bottom:15px;">About</a>
-      </div>
+  <div class="dropdown_alt">
+    <div class="dropbtn_alt">
+        <div class="bar-cont_alt">
+            <div class="bar_alt"></div>
+            <div class="bar_alt"></div>
+            <div class="bar_alt" style="margin-bottom:0"></div>
+        </div>
     </div>
+    <a href="../index.html">
+        <div class="home">
+            <i class="material-icons mat">home</i>
+        </div>
+    </a>
+    <div class="dropdown-content_alt">
+      <div class="point_alt"></div>
+      <a href="../code/code.html" style="border-radius: 4px 4px 0 0;padding-top:15px;">Code</a>
+      <a href="../prototyping/prototyping.html">Prototyping</a>
+      <a href="../about/about.html" style="border-radius: 0 0 4px 4px;padding-bottom:15px;">About</a>
+    </div>
+  </div>
 
     <h1 class="section-title"> Design</h1>
     <h4 class="section-subtitle"> A compilation of some of my branding & marketing schemes, illustrations, <br>product design,
       and just-for-fun doodles.
-      <a href="../index.html">
-        <div class="home">
-            <i class="material-icons mat">home</i>
-        </div>
-      </a>
     </h4>
         <a href="content/page1.html" class="transition">
           <div class="preview" style="background-color:#c9d1eb">
