--- a/prototyping/prototyping.html
+++ b/prototyping/prototyping.html
@@ -21,18 +21,38 @@
       href="https://fonts.googleapis.com/css?family=PT-Serif">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Nunito">
+  <!-- Google Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- JQuery -->
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="../js/app.js"></script>
-
 </head>
 
 <body>
 
   <div class="container">
-      <a href="../index.html"class="close lavender" style="color:white">x</a>
+    <div class="dropdown_alt">
+      <div class="dropbtn_alt">
+          <div class="bar-cont_alt">
+              <div class="bar_alt"></div>
+              <div class="bar_alt"></div>
+              <div class="bar_alt" style="margin-bottom:0"></div>
+          </div>
+      </div>
+      <a href="../index.html">
+          <div class="home">
+              <i class="material-icons mat">home</i>
+          </div>
+      </a>
+      <div class="dropdown-content_alt">
+        <div class="point_alt"></div>
+        <a href="../design/design.html" style="border-radius: 4px 4px 0 0;padding-top:15px;">Design</a>
+        <a href="../code/code.html">Code</a>
+        <a href="../about/about.html" style="border-radius: 0 0 4px 4px;padding-bottom:15px;">About</a>
+      </div>
+    </div>
       <h1 class="section-title"> Prototyping </h1>
       <h4 class="section-subtitle"> Some visual manifestations of my passions for both engineering and art. </h4>
           <a href="content/mo.html" class="transition">
