--- a/about/about.html
+++ b/about/about.html
@@ -25,18 +25,24 @@
       href="https://fonts.googleapis.com/css?family=Karla">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Domine">
+  <!-- Google Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- JQuery -->
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
-  <script src="../js/app.js"></script>
+  <script src="../../js/app.js"></script>
 
 
   <script type="text/javascript">
   $(document).ready(function() {
       $("body").css("display", "none");
 
-      $("body").fadeIn(2000);
+
+      // $("body").animate({width:'toggle'},500);
+      $("body").slideDown("slow");
 
       $("a.transition").click(function(event){
           event.preventDefault();
@@ -54,7 +60,9 @@
 <body>
 
     <div class="container">
-        <a href="../index.html"class="close lavender" style="color:white">x</a>
+        <a href="../index.html"class="close lavender" style="color:white">
+            <i class="fa fa-close close-icon"></i>
+        </a>
         <div class="about-elem about-text">
             <span style="font-size: 20px;">Nice to meet you! <br>I'm <b class="hov">Adriana Babakanian</b>, a third-year
             Regents' Scholar at the <em class="hov">University of California, Berkeley</em>
