--- a/design/content/cubcon.html
+++ b/design/content/cubcon.html
@@ -21,8 +21,12 @@
       href="https://fonts.googleapis.com/css?family=PT-Serif">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Nunito">
+  <!-- Google Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- JQuery -->
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="../../js/app.js"></script>
@@ -31,20 +35,22 @@
 
 <body>
   <div class="container">
-      <a href="../design.html"class="back lavender" style="color:white"><</a>
+      <a href="../design.html"class="close lavender" style="color:white">
+          <i class="fa fa-close close-icon"></i>
+      </a>
       <h1 class="section-title"> CubCon</h1>
-      <h4 class="section-subtitle"> One of our goals at Cal Hacks is to make hacker culture
+      <h4 class="section-subtitle sub"> One of our goals at Cal Hacks is to make hacker culture
         accessible to anyone who wants to be a part of it, regardless of level of expertise in
         programming and tech. In Spring 2017, we hosted our first ever CubCon, a series of
         talks, workshops, and breakout sessions hosting several industry speakers and prominent campus
         tech clubs geared torwards hackers with little or no experience. I chose to market the
         event in a pixelated, video-game-inspired style.
-        <div class="full-image" style="height:360px"><img src="../../partials/images/design/cubcon/cubcon_cover.png"></div>
-        <div class="half-image" style="height:300px;background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/front.png"></div>
-        <div class="half-image" style="height:300px;background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/back.png"></div>
-        <div class="third-image" style="background-color:#b1e3f7"><img src="../../partials/images/design/cubcon/laptop.png" style="width:250px"></div>
-        <div class="third-image" style="background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/title.png" style="width:250px"></div>
-        <div class="third-image" style="background-color:#b1e3f7"><img src="../../partials/images/design/cubcon/rocket.png" style="width:120px"></div>
       </h4>
+      <div class="full-image" style="height:360px"><img src="../../partials/images/design/cubcon/cubcon_cover.png"></div>
+      <div class="half-image" style="height:300px;background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/front.png"></div>
+      <div class="half-image" style="height:300px;background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/back.png"></div>
+      <div class="third-image" style="background-color:#b1e3f7"><img src="../../partials/images/design/cubcon/laptop.png" style="width:250px"></div>
+      <div class="third-image" style="background-color:#e1f3fa"><img src="../../partials/images/design/cubcon/title.png" style="width:250px"></div>
+      <div class="third-image" style="background-color:#b1e3f7"><img src="../../partials/images/design/cubcon/rocket.png" style="width:120px"></div>
   </div>
 </body>
