--- a/design/content/laudem.html
+++ b/design/content/laudem.html
@@ -21,18 +21,25 @@
       href="https://fonts.googleapis.com/css?family=PT-Serif">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Nunito">
+  <!-- Google Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- JQuery -->
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="../../js/app.js"></script>
+
 </head>
 
 <body>
   <div class="container">
-      <a href="../design.html"class="back lavender" style="color:white"><</a>
+      <a href="../design.html"class="close lavender" style="color:white">
+          <i class="fa fa-close close-icon"></i>
+      </a>
       <h1 class="section-title"> Laud'Em</h1>
-      <h4 class="section-subtitle"> Laud'Em is an app with the purpose of spreading social altruism in
+      <h4 class="section-subtitle sub"> Laud'Em is an app with the purpose of spreading social altruism in
         everyday settings and environments. I designed the user interface of the app, as well as all
         branding and marketing materials.
       </h4>
