--- a/design/content/page1.html
+++ b/design/content/page1.html
@@ -21,8 +21,12 @@
       href="https://fonts.googleapis.com/css?family=PT-Serif">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Nunito">
+  <!-- Google Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- JQuery -->
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="../../js/app.js"></script>
@@ -30,9 +34,11 @@
 </head>
 
 <div class="container">
-    <a href="../design.html"class="back lavender" style="color:white"><</a>
+    <a href="../design.html"class="close lavender" style="color:white">
+        <i class="fa fa-close close-icon"></i>
+    </a>
     <h1 class="section-title"> Cal Hacks 4.0</h1>
-    <h4 class="section-subtitle"> I'm a director at Cal Hacks, the
+    <h4 class="section-subtitle sub"> I'm a director at Cal Hacks, the
       largest hackathon in the world! One of my main roles is as graphic
       designer &mdash; logos, branding, marketing, you name it. Over the
       past year, I created the branding for Cal Hacks 4.0 under the general
