--- a/design/content/sushi.html
+++ b/design/content/sushi.html
@@ -21,8 +21,12 @@
       href="https://fonts.googleapis.com/css?family=PT-Serif">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Nunito">
+  <!-- Google Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- JQuery -->
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="../../js/app.js"></script>
@@ -31,9 +35,11 @@
 
 <body>
   <div class="container">
-      <a href="../design.html"class="back lavender" style="color:white"><</a>
+      <a href="../design.html"class="close lavender" style="color:white">
+          <i class="fa fa-close close-icon"></i>
+      </a>
       <h1 class="section-title"> Sushi Series</h1>
-      <h4 class="section-subtitle"> I'd never say no to sushi, especially when it
+      <h4 class="section-subtitle sub"> I'd never say no to sushi, especially when it
         comes to tempura. I'm working on a series of sushi illustrations made exclusively
         with Illustrator's pen tool but inspired by a more painterly approach. This
         series started when I was playing around with layering opacities on my drawing
