--- a/design/design.html
+++ b/design/design.html
@@ -21,6 +21,8 @@
       href="https://fonts.googleapis.com/css?family=PT-Serif">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Nunito">
+  <link rel="stylesheet" type="text/css"
+      href="https://fonts.googleapis.com/css?family=Nunito">
   <!-- Google Material Icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- JQuery -->
@@ -34,7 +36,7 @@
 <body>
 
 <div class="container">
-
+<!-- <div class="fade" style="display:none"> -->
   <div class="dropdown_alt">
     <div class="dropbtn_alt">
         <div class="bar-cont_alt">
@@ -60,6 +62,8 @@
     <h4 class="section-subtitle"> A compilation of some of my branding & marketing schemes, illustrations, <br>product design,
       and just-for-fun doodles.
     </h4>
+
+  <!-- </div> -->
         <a href="content/page1.html" class="transition">
           <div class="preview" style="background-color:#c9d1eb">
               <div class="preview-layover">
