--- a/code/content/stubhub.html
+++ b/code/content/stubhub.html
@@ -21,8 +21,12 @@
       href="https://fonts.googleapis.com/css?family=PT-Serif">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Nunito">
+  <!-- Google Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- JQuery -->
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="../../js/app.js"></script>
@@ -31,7 +35,9 @@
 
 
 <div class="container">
-    <a href="../code.html"class="back lavender" style="color:white"><</a>
+    <a href="../code.html"class="close lavender" style="color:white">
+        <i class="fa fa-close close-icon"></i>
+    </a>
     <h1 class="section-title"> StubHub Community</h1>
     <h4 class="section-subtitle"> As an eBay intern during Summer 2017, I worked as a part
       of StubHub's Search Infrastructure engineering team. In addition to contributing towards
