--- a/index.html
+++ b/index.html
@@ -33,9 +33,17 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="js/app.js"></script>
 
-</head>
-<body>
+  <!-- <script type="text/javascript">
+  $(document).ready(function() {
+    $('.wrap').stop(true).fadeIn({
+      duration: 1000,
+      queue: false
+  }).css('display', 'none').slideDown(500);
+    });
+  </script> -->
 
+</head>
+<body style="background-color:rgba(221,170,187,0.2)">
 
   <div class="dropdown">
     <div class="dropbtn">
