--- a/prototyping/content/mo.html
+++ b/prototyping/content/mo.html
@@ -21,8 +21,12 @@
       href="https://fonts.googleapis.com/css?family=PT-Serif">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Nunito">
+  <!-- Google Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- JQuery -->
-  <script src="jquery-3.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
   <script src="../../js/app.js"></script>
@@ -31,9 +35,11 @@
 
 
 <div class="container">
-    <a href="../prototyping.html"class="back lavender" style="color:white"><</a>
+    <a href="../prototyping.html"class="close lavender" style="color:white">
+        <i class="fa fa-close close-icon"></i>
+    </a>
     <h1 class="section-title"> Mo - An Angile Tread Robot </h1>
-    <h4 class="section-subtitle"> As both an engineer and a designer, prototyping is for one of the
+    <h4 class="section-subtitle sub"> As both an engineer and a designer, prototyping is for one of the
       most rewarding forms of art. In Spring of 2017, I took a class at Jacobs Hall here at UC Berkeley on
       prototyping and fabrication where my final project was to design, engineer, build, and program a Bluetooth-controlled
       robot vehicle from scratch with the ultimate goal of being able to navigate hands-free through a mystery obstacle course.
